# cf_cli

./: .gitignore  pyproject.toml
src/cf_cli/: __main__.py  cli.py  contest.py
src/cf_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
